# stemcore

./: README.md  pyproject.toml
src/stemcore/: __init__.py
src/stemcore/core/: __init__.py  convert.py  decimals.py  errors.py  is_dtypes.py  strings.py  symbolic.py
